turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:23: error: value Length is not a member of Array[Boolean]
  for(i <- 1 to grid.Length) {
                     ^HouseMany:35: error: value Length is not a member of Array[Boolean]
  forward(grid.Length * (30 + 20))
               ^